objects/sf4twitter__Fcbk_Page__c.object
<CustomObject>
    <fields>
        <fullName>sf4twitter__Category__c</fullName>
        <description>The Page&apos;s category</description>
        <label>Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Enable_Auto_Case_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Auto-Case Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Facebook_Image__c</fullName>
        <formula>HYPERLINK( &apos;http://www.facebook.com/pages/&apos;  + Name + &apos;/&apos; +  sf4twitter__Fcbk_Id__c ,
IF( sf4twitter__Image__c  &lt;&gt;null, IMAGE( sf4twitter__Image__c , &quot;&quot;), null )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Facebook Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Image__c</fullName>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Last_Time_Run__c</fullName>
        <label>Last Search Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Likes__c</fullName>
        <description>The number of users who like the Page</description>
        <label>Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Post_Hashtag_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If I add &quot;#ch&quot; to a Post, the Post should automatically be posted to my Chatter feed.</description>
        <inlineHelpText>When enabled, any Post by this Facebook page containing #ch will be automatically posted to the Chatter Feed of the Facebook Page creator. Comments on this post in Chatter will not be sent to Facebook.</inlineHelpText>
        <label>Add Posts with #ch to Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Products__c</fullName>
        <label>Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Run_Case_Association_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Case Association Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Search_Lower_Limit_Time__c</fullName>
        <label>Getting Posts and Comments Since</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Search_Upper_Limit_Time__c</fullName>
        <label>Getting Posts and Comments Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Unknown_Users__c</fullName>
        <label>Unknown Users</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Nothing</fullName>
                    <default>true</default>
                    <label>Do Nothing</label>
                </value>
                <value>
                    <fullName>Create Contact</fullName>
                </value>
                <value>
                    <fullName>Create Lead</fullName>
                </value>
                <value>
                    <fullName>Create Person Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf4twitter__Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True when Account has been Validated and acces granted to the App.</description>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <label>Facebook Page</label>
    <listViews>
        <fullName>sf4twitter__All</fullName>
        <columns>NAME</columns>
        <columns>sf4twitter__Fcbk_Id__c</columns>
        <columns>sf4twitter__Valid__c</columns>
        <columns>sf4twitter__Unknown_Users__c</columns>
        <columns>sf4twitter__Run_Case_Association_Logic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facebook Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sf4twitter__Auto_Case_Association_Logic</fullName>
        <active>true</active>
        <description>Error: To enable Case Creation you must also enable Case Association</description>
        <errorConditionFormula>sf4twitter__Enable_Auto_Case_Creation__c  = true&amp;&amp; sf4twitter__Run_Case_Association_Logic__c = false</errorConditionFormula>
        <errorDisplayField>sf4twitter__Enable_Auto_Case_Creation__c</errorDisplayField>
        <errorMessage>To enable Case Creation you must also enable Case Association</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf4twitter__Facebook_Id_not_empty</fullName>
        <active>true</active>
        <description>Facebook Id must not be empty</description>
        <errorConditionFormula>ISBLANK( sf4twitter__Fcbk_Id__c )</errorConditionFormula>
        <errorDisplayField>sf4twitter__Fcbk_Id__c</errorDisplayField>
        <errorMessage>Invalid Facebook Id</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf4twitter__until_date_greater_than_since</fullName>
        <active>true</active>
        <description>Check that until date should be greater than since date</description>
        <errorConditionFormula>sf4twitter__Search_Lower_Limit_Time__c  &gt;  sf4twitter__Search_Upper_Limit_Time__c</errorConditionFormula>
        <errorMessage>Getting Posts and Comments Until date should be greater than Getting Posts and Comments Since</errorMessage>
    </validationRules>
</CustomObject>